cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_287.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/modes_internal_test.c:171: error: DEAD_STORE
  The value written to &len (type unsigned long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/modes_internal_test.c:171:5: Write of unused value
169.       memcpy(out + len, in + len + 16, tail);
170.       memcpy(out + len + tail, in + len, 16);
171.       len += 16 + tail;
           ^
172.       tail = 16;
173.   
